RESOLVED FIXED282271
AX: Interop 2024 WPT failure "fallback role w/ region with no label"
https://bugs.webkit.org/show_bug.cgi?id=282271
Summary AX: Interop 2024 WPT failure "fallback role w/ region with no label"
James Craig
Reported 2024-10-29 12:46:06 PDT
Resolve or raise dispute Interop 2024 WPT test "fallback role w/ region with no label" in /wai-aria/role/fallback-roles.html https://wpt.fyi/results/wai-aria/role/fallback-roles.html?label=master&label=experimental&aligned&view=interop&q=label%3Ainterop-2024-accessibility
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-29 12:46:22 PDT
chris fleizach
Comment 2 2025-01-26 15:23:31 PST
EWS
Comment 3 2025-01-29 16:44:49 PST
Committed 289531@main (5899e80acec9): <https://commits.webkit.org/289531@main> Reviewed commits have been landed. Closing PR #39574 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.