AX: Interop 2024 WPT failure "fallback role w/ region with no label" https://bugs.webkit.org/show_bug.cgi?id=282271 <rdar://138860789>

Reviewed by Tyler Wilcock.

aria-roles can have multiple tokens, but not every token should be respected.
Provide the ability to skip a role if the right condition is met.

Canonical link: https://commits.webkit.org/289531@main